# ChangeLog for dev-perl/CPAN-Mini-Inject
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini-Inject/ChangeLog,v 1.15 2009/09/07 09:24:35 tove Exp $

  07 Sep 2009; Torsten Veller <tove@gentoo.org>
  -CPAN-Mini-Inject-0.25.ebuild:
  Cleanup

*CPAN-Mini-Inject-0.26 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
  +CPAN-Mini-Inject-0.26.ebuild:
  Version bump via perl-bump experimental tool.

  19 Jul 2009; Torsten Veller <tove@gentoo.org>
  CPAN-Mini-Inject-0.18.ebuild, CPAN-Mini-Inject-0.25.ebuild:
  IO-Compress replaces Compress-Zlib

  03 Jun 2009; Torsten Veller <tove@gentoo.org>
  -CPAN-Mini-Inject-0.23.ebuild, -CPAN-Mini-Inject-0.24.ebuild:
  Cleanup

*CPAN-Mini-Inject-0.25 (30 May 2009)

  30 May 2009; Torsten Veller <tove@gentoo.org>
  +CPAN-Mini-Inject-0.25.ebuild:
  Version bump

*CPAN-Mini-Inject-0.24 (11 May 2009)

  11 May 2009; Torsten Veller <tove@gentoo.org>
  +CPAN-Mini-Inject-0.24.ebuild:
  Version bump

  18 Nov 2008; Torsten Veller <tove@gentoo.org>
  CPAN-Mini-Inject-0.18.ebuild, CPAN-Mini-Inject-0.23.ebuild:
  New virtuals: Archive-Tar Compress-Zlib

*CPAN-Mini-Inject-0.23 (26 Oct 2008)

  26 Oct 2008; Torsten Veller <tove@gentoo.org>
  +CPAN-Mini-Inject-0.23.ebuild:
  Version bump

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  CPAN-Mini-Inject-0.18.ebuild:
  Stable on ia64.

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  CPAN-Mini-Inject-0.18.ebuild:
  Adding perl dep; fixed DEPEND

  03 Jul 2006; Christian Hartmann <ian@gentoo.org>
  CPAN-Mini-Inject-0.18.ebuild:
  Fixed RDEPEND wrt bug #134781

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  CPAN-Mini-Inject-0.18.ebuild:
  Mark 0.18 ~ia64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  -CPAN-Mini-Inject-0.16.ebuild, CPAN-Mini-Inject-0.18.ebuild:
  marking stable sparc x86

*CPAN-Mini-Inject-0.18 (22 Nov 2005)

  22 Nov 2005; Michael Cummings <mcummings@gentoo.org>