@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/CPAN-Mini-Inject
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini-Inject/ChangeLog,v 1.15 2009/09/07 09:24:35 tove Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini-Inject/ChangeLog,v 1.16 2010/01/29 14:50:04 tove Exp $
+
+*CPAN-Mini-Inject-0.27 (29 Jan 2010)
+
+  29 Jan 2010; Torsten Veller <tove@gentoo.org>
+  +CPAN-Mini-Inject-0.27.ebuild:
+  Version bump
 
   07 Sep 2009; Torsten Veller <tove@gentoo.org>
   -CPAN-Mini-Inject-0.25.ebuild:
